// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AwsDynamoDBGlobalServiceModule UT input changes should handle replica add 2`] = `
"- Expected
+ Received

  Object {
    "output.dynamodb-global-test-table-123:us-east-1:TableArn": Object {
      "value": "aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1.arn",
    },
+   "output.dynamodb-global-test-table-123:us-west-2:TableArn": Object {
+     "value": "aws_dynamodb_table_replica.dynamodb-global-test-table_us-west-2.arn",
+   },
    "output.dynamodb-test-table-TableArn": Object {
      "value": "mock.TableArn",
    },
    "resource.aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1": Object {
      "global_table_arn": "mock.TableArn",
      "provider": "aws.123-us-east-1",
+   },
+   "resource.aws_dynamodb_table_replica.dynamodb-global-test-table_us-west-2": Object {
+     "depends_on": "[aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1]",
+     "global_table_arn": "mock.TableArn",
+     "provider": "aws.123-us-west-2",
+     "tags": Object {
+       "env": "replica2",
+     },
    },
  }"
`;

exports[`AwsDynamoDBGlobalServiceModule UT input changes should handle replica delete 2`] = `
"- Expected
+ Received

  Object {
    "output.dynamodb-global-test-table-123:us-east-1:TableArn": Object {
      "value": "aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1.arn",
    },
-   "output.dynamodb-global-test-table-123:us-west-2:TableArn": Object {
-     "value": "aws_dynamodb_table_replica.dynamodb-global-test-table_us-west-2.arn",
-   },
    "output.dynamodb-test-table-TableArn": Object {
      "value": "mock.TableArn",
    },
    "resource.aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1": Object {
      "global_table_arn": "mock.TableArn",
      "provider": "aws.123-us-east-1",
-   },
-   "resource.aws_dynamodb_table_replica.dynamodb-global-test-table_us-west-2": Object {
-     "depends_on": "[aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1]",
-     "global_table_arn": "mock.TableArn",
-     "provider": "aws.123-us-west-2",
    },
  }"
`;

exports[`AwsDynamoDBGlobalServiceModule UT input changes should handle replica tags update 2`] = `
"- Expected
+ Received

  Object {
    "output.dynamodb-global-test-table-123:us-east-1:TableArn": Object {
      "value": "aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1.arn",
    },
    "output.dynamodb-test-table-TableArn": Object {
      "value": "mock.TableArn",
    },
    "resource.aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1": Object {
      "global_table_arn": "mock.TableArn",
      "provider": "aws.123-us-east-1",
      "tags": Object {
-       "a": "1",
+       "a": "2",
+       "b": "3",
      },
    },
  }"
`;

exports[`AwsDynamoDBGlobalServiceModule UT should CUD 2`] = `
"- Expected
+ Received

- Object {}
+ Object {
+   "output.dynamodb-global-test-table-123:us-east-1:TableArn": Object {
+     "value": "aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1.arn",
+   },
+   "output.dynamodb-test-table-TableArn": Object {
+     "value": "mock.TableArn",
+   },
+   "resource.aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1": Object {
+     "global_table_arn": "mock.TableArn",
+     "provider": "aws.123-us-east-1",
+     "tags": Object {
+       "key1": "value1",
+     },
+   },
+ }"
`;

exports[`AwsDynamoDBGlobalServiceModule UT should CUD 4`] = `"Compared values have no visual difference."`;

exports[`AwsDynamoDBGlobalServiceModule UT should CUD 6`] = `
"- Expected
+ Received

  Object {
    "output.dynamodb-global-test-table-123:us-east-1:TableArn": Object {
      "value": "aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1.arn",
    },
+   "output.dynamodb-global-test-table-123:us-west-2:TableArn": Object {
+     "value": "aws_dynamodb_table_replica.dynamodb-global-test-table_us-west-2.arn",
+   },
    "output.dynamodb-test-table-TableArn": Object {
      "value": "mock.TableArn",
    },
    "resource.aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1": Object {
      "global_table_arn": "mock.TableArn",
      "provider": "aws.123-us-east-1",
      "tags": Object {
        "key1": "value1",
+     },
    },
+   "resource.aws_dynamodb_table_replica.dynamodb-global-test-table_us-west-2": Object {
+     "depends_on": "[aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1]",
+     "global_table_arn": "mock.TableArn",
+     "provider": "aws.123-us-west-2",
    },
  }"
`;

exports[`AwsDynamoDBGlobalServiceModule UT should CUD 8`] = `
"- Expected
+ Received

  Object {
    "output.dynamodb-global-test-table-123:us-east-1:TableArn": Object {
      "value": "aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1.arn",
    },
-   "output.dynamodb-global-test-table-123:us-west-2:TableArn": Object {
-     "value": "aws_dynamodb_table_replica.dynamodb-global-test-table_us-west-2.arn",
-   },
    "output.dynamodb-test-table-TableArn": Object {
      "value": "mock.TableArn",
    },
    "resource.aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1": Object {
      "global_table_arn": "mock.TableArn",
      "provider": "aws.123-us-east-1",
      "tags": Object {
        "key1": "value1",
-     },
      },
-   "resource.aws_dynamodb_table_replica.dynamodb-global-test-table_us-west-2": Object {
-     "depends_on": "[aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1]",
-     "global_table_arn": "mock.TableArn",
-     "provider": "aws.123-us-west-2",
    },
  }"
`;

exports[`AwsDynamoDBGlobalServiceModule UT should CUD 10`] = `
"- Expected
+ Received

  Object {
-   "output.dynamodb-global-test-table-123:us-east-1:TableArn": Object {
-     "value": "aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1.arn",
-   },
    "output.dynamodb-test-table-TableArn": Object {
      "value": "mock.TableArn",
-   },
-   "resource.aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1": Object {
-     "global_table_arn": "mock.TableArn",
-     "provider": "aws.123-us-east-1",
-     "tags": Object {
-       "key1": "value1",
-     },
    },
  }"
`;

exports[`AwsDynamoDBGlobalServiceModule UT should CUD tags 2`] = `
"- Expected
+ Received

- Object {}
+ Object {
+   "output.dynamodb-global-test-table-123:us-east-1:TableArn": Object {
+     "value": "aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1.arn",
+   },
+   "output.dynamodb-test-table-TableArn": Object {
+     "value": "mock.TableArn",
+   },
+   "resource.aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1": Object {
+     "global_table_arn": "mock.TableArn",
+     "provider": "aws.123-us-east-1",
+   },
+ }"
`;

exports[`AwsDynamoDBGlobalServiceModule UT should CUD tags 4`] = `
"- Expected
+ Received

  Object {
    "output.dynamodb-global-test-table-123:us-east-1:TableArn": Object {
      "value": "aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1.arn",
    },
    "output.dynamodb-test-table-TableArn": Object {
      "value": "mock.TableArn",
    },
    "resource.aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1": Object {
      "global_table_arn": "mock.TableArn",
      "provider": "aws.123-us-east-1",
+     "tags": Object {
+       "tag1": "value1_1",
+       "tag2": "value2_1",
+     },
    },
  }"
`;

exports[`AwsDynamoDBGlobalServiceModule UT should CUD tags 6`] = `
"- Expected
+ Received

  Object {
    "output.dynamodb-global-test-table-123:us-east-1:TableArn": Object {
      "value": "aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1.arn",
    },
    "output.dynamodb-test-table-TableArn": Object {
      "value": "mock.TableArn",
    },
    "resource.aws_dynamodb_table_replica.dynamodb-global-test-table_us-east-1": Object {
      "global_table_arn": "mock.TableArn",
      "provider": "aws.123-us-east-1",
-     "tags": Object {
-       "tag1": "value1_1",
-       "tag2": "value2_1",
-     },
    },
  }"
`;

exports[`AwsDynamoDBGlobalServiceModule UT should handle moduleId change 2`] = `"Compared values have no visual difference."`;
